# finance-data-ops

./: .env  .env.example  .gitignore  CALENDAR_CADENCE_PLAN.md  OHLCV_ADJCLOSE_BACKFILL_PLAN.md  README.md  cloudbuild.yaml  prefect.yaml  pyproject.toml  worker.env.template.yaml  worker.env.yaml
aggregation/: folder__.github.txt  folder__docs.txt  folder__flows.txt  folder__root.txt  folder__scripts.txt  folder__src__finance_data_ops.txt  folder__src__finance_data_ops__derived.txt  folder__src__finance_data_ops__ops.txt  folder__src__finance_data_ops__providers.txt  folder__src__finance_data_ops__publish.txt  folder__src__finance_data_ops__refresh.txt  folder__src__finance_data_ops__validation.txt  project_organization.txt
config/: symbol_normalization.yml
data/: entity_identity_curated.json
data_cache/: market_fundamentals_v2.parquet  ticker_fundamental_summary.parquet
docs/: architecture.md  cloud_tasks_cloud_run_deployment.md  market_cap_contract.md  migrations.md  operations.md  parity_rules.md  prefect_orchestration.md  provider_runtime_dependencies.md  schema_contract.md  secret_consolidation_inventory.md  thematic-sources-and-relationship-map.md  ticker_readiness_contract.md
flows/: __init__.py  daily_production_inference.py  dataops_earnings_daily.py  dataops_fundamentals_daily.py  dataops_macro_daily.py  dataops_market_daily.py  dataops_release_calendar_daily.py  dataops_trading_calendar_daily.py  prefect_dataops_daily.py
scripts/: audit_frontier_entity_dedup.py  audit_ticker_readiness.py  backfill_entity_home_country.py  build_entity_identity.py  (+34 more)
(+231 files in other folders)
